<resources>
    <string name="app_name">SMS Explorer</string>
    <string name="estimated_time_remaining">%s remaining (%d/%d sms left)</string>
    <string name="forward">Forward</string>
    <string name="settings">Settings</string>
    <string name="phone_number">Phone number</string>
    <string name="image_quality">Image Quality (1–95)</string>
    <string name="images">Images</string>
    <string name="raw">RAW</string>
    <string name="png">PNG</string>
    <string name="no_limit">No limit</string>
</resources>